# tensorscript

./: .clang-tidy  CMakeLists.txt  LICENSE  README.md
include/tensorscript/codegen/: pass.h  target.h
include/tensorscript/codegen/analysis/: align.h  allocation.h  axes.h  layout.h  liveness.h
include/tensorscript/codegen/selection/: generator.h  machine_layout.h  machine_value.h
include/tensorscript/codegen/transform/: coalesce.h  cts.h  dce.h  disassociate.h  membar.h  peephole.h  reassociate.h
include/tensorscript/driver/: backend.h  buffer.h  context.h  device.h  dispatch.h  error.h  event.h  handle.h  kernel.h  module.h  platform.h  stream.h
include/tensorscript/ir/: basic_block.h  builder.h  cfg.h  constant.h  context.h  context_impl.h  enums.h  function.h  instructions.h  metadata.h  module.h  print.h  type.h  value.h  visitor.h
include/tensorscript/tools/: bench.hpp  graph.h  thread_pool.h
include/tensorscript/tools/sys/: getenv.hpp  mkdir.hpp
lib/codegen/: target.cc
lib/codegen/analysis/: align.cc  allocation.cc  axes.cc  layout.cc  liveness.cc
lib/codegen/selection/: generator.cc  machine_layout.cc  machine_value.cc
lib/codegen/transform/: coalesce.cc  cts.cc  dce.cc  disassociate.cc  membar.cc  peephole.cc  reassociate.cc
lib/driver/: backend.cc  buffer.cc  context.cc  device.cc  dispatch.cc  error.cc  event.cc  handle.cc  kernel.cc  module.cc  platform.cc  stream.cc
lib/ir/: basic_block.cc  builder.cc  cfg.cc  constant.cc  context.cc  function.cc  instructions.cc  metadata.cc  module.cc  print.cc  type.cc  value.cc
